fix: Update reusable-image-scan.yml to lowercase registry

--- a/.github/workflows/reusable-image-scan.yml
+++ b/.github/workflows/reusable-image-scan.yml
@@ -41,6 +41,12 @@ jobs:
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
           syft version
 
+      - name: Lowercase Registry
+        id: registry_case
+        uses: ASzc/change-string-case-action@v6
+        with:
+          string: ${{ matrix.image }}
+
       - name: Generate SBOM
         env:
           IMAGE: ${{ matrix.image }}
